@@ -2,6 +2,11 @@
 2017-04-19 Ron Norman <rjn@inglenet.com>
 
 	* fileio.c: 
+	 For the MF EXTFH interface, set f->file_version = COB_FILE_VERSION
+
+2017-04-19 Ron Norman <rjn@inglenet.com>
+
+	* fileio.c: 
 	 For BDB, check that the size of a record read is not larger than
 	 what the FD has defined and return status 43 to the READ.
 	 For BDB, on OPEN, read the first record in the file and if its
